apps/base/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-dashboard-https
  namespace: keycloak
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: keycloak-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.saldivar.io`)
      kind: Rule
      services:
        - name: keycloak
          port: http
      middlewares:
        - name: security-no-frame-deny
          namespace: kube-system
